Enhancing java.se with requires transitive java.base.